"Misc|Break to debugger" menu option.  This will cause a trap
to an external debugger, e.g. for running Rgui under gdb.  Be
careful: If the menu item is selected when not running under a
debugger R is likely to crash.

Rcmd SHLIB was computing dependencies for all C files, not just those
specified on the command line, and building the DLL from all *.o files
in the directory.



rw1082
======

Fixed list.files() to properly handle paths like "C:", etc.

Fixed unlink() to accept empty file list for Unix consistency.

Fix to allow system malloc to be used (see rw1071) reduced the ability
to use large memory areas via --max-mem-size with the usual malloc.



rw1081
======

Files in inst/ are installed later in the process of installing a
package (at the request of Ray Brownrigg: the build process was as
documented in `Writing R Extensions').  CVS files will not be installed.

The fast bmp/png/jpeg code introduced in R 1.8.0 is used for saving
from menus (and savePlot()) as well as for the devices.

Lines drawn at the extreme top or right of the device region (e.g. by
box(which="outer")) might have been drawn one pixel too far from the
origin and so perhaps clipped.

In 1.8.0 only, the bottom line of pixels was not copied to the file
for png/jpeg/bmp device plots (as the Windows GDI function used was
incorrectly documented).

File src/nmath/dnt.c was not being built for the standalone Rmath library.

packageStatus() now works under Windows.

Fixed instability under some Windows versions associated with
double buffering of the windows() device. (PR#5173)



rw1080
======

The initial size and position of the MDI frame can be set in Rconsole:
see the comments in .../etc/Rconsole.  The initial position of the
console window and graphics windows can be set in Rconsole and in the
GUI Preferences editor.

The windows() graphics device now has arguments xpos and ypos to set
the initial position, overriding the settings in Rconsole.
