@@ -234,7 +234,7 @@ static Rboolean GA_Locator(double *x, double *y, NewDevDesc *dd);
 static void GA_Line(double x1, double y1, double x2, double y2,
 		    R_GE_gcontext *gc,
 		    NewDevDesc *dd);
-static void GA_MetricInfo(int c, 
+static void GA_MetricInfo(int c,
 			  R_GE_gcontext *gc,
 			  double* ascent, double* descent,
 			  double* width, NewDevDesc *dd);
@@ -254,7 +254,7 @@ static void GA_Size(double *left, double *right,
 		    double *bottom, double *top,
 		    NewDevDesc *dd);
 static void GA_Resize(NewDevDesc *dd);
-static double GA_StrWidth(char *str, 
+static double GA_StrWidth(char *str,
 			  R_GE_gcontext *gc,
 			  NewDevDesc *dd);
 static void GA_Text(double x, double y, char *str,
@@ -1260,6 +1260,7 @@ setupScreenDevice(NewDevDesc *dd, gadesc *xd, double w, double h,
 {
     menu  m;
     int   iw, ih;
+    int   cw, ch;
     double dw, dw0, dh, d;
 
     xd->kind = SCREEN;
@@ -1271,20 +1272,29 @@ setupScreenDevice(NewDevDesc *dd, gadesc *xd, double w, double h,
 	dh = (int) (w * user_ypinch);
     else
 	dh = (int) (h / pixelHeight(NULL));
+
+    if (ismdi()) {
+	cw = RgetMDIwidth();
+	ch = RgetMDIheight();
+    } else {
+	cw = devicewidth(NULL);
+	ch = deviceheight(NULL);
+    }
+
     if (resize != 3) {
-	if ((dw / devicewidth(NULL)) > 0.85) {
+	if ((dw / cw) > 0.85) {
 	    d = dh / dw;
-	    dw = 0.85 * devicewidth(NULL);
+	    dw = 0.85 * cw;
 	    dh = d * dw;
 	}
-	if ((dh / deviceheight(NULL)) > 0.85) {
+	if ((dh / ch) > 0.85) {
 	    d = dw / dh;
-	    dh = 0.85 * deviceheight(NULL);
+	    dh = 0.85 * ch;
 	    dw = d * dh;
 	}
     } else {
-	dw = min(dw, 0.85*devicewidth(NULL));
-	dh = min(dh, 0.85*deviceheight(NULL));
+	dw = min(dw, 0.85*cw);
+	dh = min(dh, 0.85*ch);
     }
     iw = dw + 0.5;
     ih = dh + 0.5;
@@ -1293,8 +1303,8 @@ setupScreenDevice(NewDevDesc *dd, gadesc *xd, double w, double h,
 	int grx, gry;
 	grx = (xpos == NA_INTEGER) ? graphicsx : xpos;
 	gry = (ypos == NA_INTEGER) ? graphicsy : ypos;
-	if (grx < 0) grx = devicewidth(NULL)  - iw + grx;
-	if (gry < 0) gry = deviceheight(NULL) - ih + gry;
+	if (grx < 0) grx = cw - iw + grx;
+	if (gry < 0) gry = ch - ih + gry;
 	if (!(xd->gawin = newwindow("R Graphics",
 				    rect(grx, gry, iw, ih),
 				    Document | StandardWindow | Menubar |
@@ -1443,7 +1453,7 @@ setupScreenDevice(NewDevDesc *dd, gadesc *xd, double w, double h,
     setdata(xd->mfix, (void *) dd);
     show(xd->gawin); /* twice, for a Windows bug */
     show(xd->gawin);
-    BringToTop(xd->gawin);
+    BringToTop(xd->gawin, 0);
     sethit(xd->gawin, devga_sbf);
     setresize(xd->gawin, HelpResize);
     setredraw(xd->gawin, HelpExpose);
@@ -1599,7 +1609,7 @@ static Rboolean GA_Open(NewDevDesc *dd, gadesc *xd, char *dsp,
 	/* asked for						*/
 	/********************************************************/
 
-static double GA_StrWidth(char *str, 
+static double GA_StrWidth(char *str,
 			  R_GE_gcontext *gc,
 			  NewDevDesc *dd)
 {
@@ -1623,7 +1633,7 @@ static double GA_StrWidth(char *str,
 	/* Character Metric Information */
 	/* Passing c == 0 gets font information */
 
-static void GA_MetricInfo(int c, 
+static void GA_MetricInfo(int c,
 			  R_GE_gcontext *gc,
 			  double* ascent, double* descent,
 			  double* width, NewDevDesc *dd)
@@ -2650,14 +2660,16 @@ extern UImode CharacterMode;
 
 SEXP do_bringtotop(SEXP call, SEXP op, SEXP args, SEXP env)
 {
-    int dev;
+    int dev, stay;
     GEDevDesc *gdd;
     gadesc *xd;
 
     checkArity(op, args);
     dev = asInteger(CAR(args));
+    stay = asInteger(CADR(args));
+
     if(dev == -1) { /* console */
-	if(CharacterMode == RGui) BringToTop(RConsole);
+	if(CharacterMode == RGui) BringToTop(RConsole, stay);
     } else {
 	if(dev < 1 || dev > R_MaxDevices || dev == NA_INTEGER)
 	    errorcall(call, "invalid value of `which'");
@@ -2665,7 +2677,8 @@ SEXP do_bringtotop(SEXP call, SEXP op, SEXP args, SEXP env)
 	if(!gdd) errorcall(call, "invalid device");
 	xd = (gadesc *) gdd->dev->deviceSpecific;
 	if(!xd) errorcall(call, "invalid device");
-	BringToTop(xd->gawin);
+	if(stay && ismdi()) error("requires SDI mode");
+	BringToTop(xd->gawin, stay);
     }
     return R_NilValue;
 }
